# magic-carpet-2-hd-clean

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  remc2
data/: config.ini
src/obsolete/: AIL_stub.h
src/remc2/: AIL_stub.h  Animation.cpp  Basic.cpp  Basic.h  CMakeLists.txt  CommandLineParser.cpp  CommandLineParser.h  DataFileIO.h  GameRenderHD.h  MenusAndIntros.cpp  MenusAndIntros.h  Network.h  Sound.cpp  Sound.h  TextureMaps.cpp  engine_support.cpp  engine_support.h  port_filesystem.cpp  port_filesystem.h  port_outputs.h  port_sdl_sound.cpp  port_sdl_sound.h  read_config.cpp  read_config.h  sub_main.cpp  sub_main.h
src/remc2editor/: editor.h  editor_main.cpp
